@@ -6,7 +6,7 @@ import lombok.*;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@Getter
+@Getter @Setter
 @ToString
 @Builder
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
@@ -14,15 +14,17 @@ import java.util.stream.Collectors;
 public class RoadmapResponse {
     private RoadmapDto roadmap;
     private RoadmapViewportDto viewport;
-    private List<RoadmapEdgeDto> roadmapEdges;
-    private List<RoadmapNodeDto> roadmapNodes;
+    private List<RoadmapEdgeDto> edges;
+    private List<RoadmapNodeDto> nodes;
+    private List<CommentDto> commentDtos;
 
     public static RoadmapResponse of(Roadmap roadmap) {
         return RoadmapResponse.builder()
                 .roadmap(RoadmapDto.of(roadmap))
                 .viewport(RoadmapViewportDto.of(roadmap.getRoadmapViewport()))
-                .roadmapNodes(roadmap.getRoadmapNodes().stream().map(roadmapNode -> RoadmapNodeDto.of(roadmapNode)).collect(Collectors.toList()))
-                .roadmapEdges(roadmap.getRoadmapEdges().stream().map(roadmapEdge -> RoadmapEdgeDto.of(roadmapEdge)).collect(Collectors.toList()))
+                .nodes(roadmap.getRoadmapNodes().stream().map(RoadmapNodeDto::of).toList())
+                .edges(roadmap.getRoadmapEdges().stream().map(RoadmapEdgeDto::of).toList())
                 .build();
     }
+
 }
