@@ -1,8 +1,13 @@
 package com.roadmaker.roadmap.service;
 
+import com.roadmaker.commons.exception.ConflictException;
+import com.roadmaker.commons.exception.NotFoundException;
 import com.roadmaker.member.entity.Member;
+import com.roadmaker.member.entity.MemberRepository;
 import com.roadmaker.member.service.MemberService;
 import com.roadmaker.roadmap.dto.*;
+import com.roadmaker.roadmap.entity.comment.Comment;
+import com.roadmaker.roadmap.entity.comment.CommentRepository;
 import com.roadmaker.roadmap.entity.inprogressnode.InProgressNode;
 import com.roadmaker.roadmap.entity.inprogressnode.InProgressNodeRepository;
 import com.roadmaker.roadmap.entity.inprogressroadmap.InProgressRoadmap;
@@ -17,20 +22,18 @@ import com.roadmaker.roadmap.entity.roadmapnode.RoadmapNode;
 import com.roadmaker.roadmap.entity.roadmapnode.RoadmapNodeRepository;
 import com.roadmaker.roadmap.entity.roadmapviewport.RoadmapViewport;
 import com.roadmaker.roadmap.entity.roadmapviewport.RoadmapViewportRepository;
-import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class RoadmapServiceImpl implements RoadmapService{
 
-    private final MemberService memberService;
     private final RoadmapRepository roadmapRepository;
     private final RoadmapNodeRepository roadmapNodeRepository;
     private final RoadmapEdgeRepository roadmapEdgeRepository;
@@ -38,6 +41,8 @@ public class RoadmapServiceImpl implements RoadmapService{
     private final RoadmapViewportRepository roadmapViewportRepository;
     private final InProgressRoadmapRepository inProgressRoadmapRepository;
     private final InProgressNodeRepository inProgressNodeRepository;
+    private final CommentRepository commentRepository;
+    private final MemberRepository memberRepository;
 
     @Override
     public Long createRoadmap(RoadmapRequest roadmapRequest, Member member) {
@@ -51,21 +56,18 @@ public class RoadmapServiceImpl implements RoadmapService{
         roadmapRepository.save(roadmap);
 
         // edge 저장하기
-        List<RoadmapEdgeDto> roadmapEdgeDtos = roadmapRequest.getRoadmapEdges();
+        List<RoadmapEdgeDto> roadmapEdgeDtos = roadmapRequest.getEdges();
         List<RoadmapEdge> roadmapEdges = roadmapEdgeDtos.stream()
-                .map(edgeDto -> edgeDto.toEntity(roadmap))
-                .collect(Collectors.toList());
+                .map(edgeDto -> edgeDto.toEntity(roadmap)).toList();
         roadmapEdgeRepository.saveAll(roadmapEdges);
 //
 //
 //        // 노드 저장하기
-        List<RoadmapNodeDto> roadmapNodeDtos = roadmapRequest.getRoadmapNodes();
-        List<RoadmapNode> roadmapNodes = roadmapNodeDtos.stream()
-                .map(nodeDto -> {
-                    System.out.println("nodeDto = " + nodeDto.toString());
-                    return nodeDto.toEntity(roadmap);
-                })
-                .collect(Collectors.toList());
+        List<RoadmapNodeDto> roadmapNodeDtos = roadmapRequest.getNodes();
+        List<RoadmapNode> roadmapNodes = roadmapNodeDtos
+                .stream()
+                .map(nodeDto -> nodeDto.toEntity(roadmap))
+                .toList();
 
         roadmapNodeRepository.saveAll(roadmapNodes);
 
@@ -83,53 +85,41 @@ public class RoadmapServiceImpl implements RoadmapService{
     }
 
     @Override
-    public RoadmapDto findRoadmapById(Long roadmapId) {
-        Optional<Roadmap> roadmapOptional = roadmapRepository.findById(roadmapId);
-        Roadmap roadmap = roadmapOptional.orElse(null);
-        if (roadmap != null) {
-            return RoadmapDto.of(roadmap);
-        }
-        return null;
+    public Roadmap findRoadmapById(Long roadmapId) {
+        return roadmapRepository.findById(roadmapId).orElseThrow(NotFoundException::new);
     }
 
     @Override
-    public boolean doJoinRoadmap(Long roadmapId, Member member) {
-        //해당 유저가 이미 join 하고 있다면 거짓 반환
-        if (inProgressRoadmapRepository.findByRoadmapIdAndMemberId(roadmapId, member.getId()).isPresent()) {
-            return false;
+    @Transactional
+    public void joinRoadmap(Roadmap roadmap, Member member) {
+        // 이미 참여중인지 확인
+        Optional<InProgressRoadmap> inProgressRoadmapOptional = inProgressRoadmapRepository.findByRoadmapIdAndMemberId(roadmap.getId(), member.getId());
+        if (inProgressRoadmapOptional.isPresent()) {
+            throw new ConflictException();
         }
+        
+        // InProgresRoadmap 생성
+        InProgressRoadmap inProgressRoadmap = InProgressRoadmap.builder()
+                .roadmap(roadmap)
+                .member(member)
+                .done(false)
+                .build();
 
-        Optional<Roadmap> roadmapOptional = roadmapRepository.findById(roadmapId);
-        Roadmap roadmap = roadmapOptional.orElse(null); //nul 처리는 필요는 없음
+        inProgressRoadmapRepository.save(inProgressRoadmap);
 
-        //inProgressRoadmap 에 들어갈 inProgressNode 들의 리스트 생성
-        // 리스트 검색-해당 로드맵에 해당하는 모든 노드들(모조리)
-        List<RoadmapNode> roadmapNodes = roadmapNodeRepository.findByRoadmapId(roadmapId);
-
-        // 로드맵 join 시 생성되는 InProgressNode 리스트 생성
-        List<InProgressNode> inProgressNodes = new ArrayList<>();
+        // InProgressNode 생성
+        List<RoadmapNode> roadmapNodes = roadmapNodeRepository.findByRoadmapId(roadmap.getId());
 
         roadmapNodes
                 .forEach(node -> {InProgressNode inProgressNode = InProgressNode.builder()
                         .roadmap(roadmap)
                         .roadmapNode(node)
                         .member(member)
+                        .inProgressRoadmap(inProgressRoadmap)
                         .done(false)
                         .build();
                     inProgressNodeRepository.save(inProgressNode);
-                    inProgressNodes.add(inProgressNode);
                 });
-
-        InProgressRoadmap inProgressRoadmap= InProgressRoadmap.builder()
-                .roadmap(roadmap)
-                .member(member)
-                .inProgressNodes(inProgressNodes)
-                .done(false)
-                .build();
-
-        inProgressRoadmapRepository.save(inProgressRoadmap);
-
-        return true;
     }
 
     @Override
@@ -148,4 +138,43 @@ public class RoadmapServiceImpl implements RoadmapService{
         return true;
     }
 
+    public RoadmapResponse makeRoadmapResponse(RoadmapDto roadmapDto) {
+        Long roadmapId = roadmapDto.getId();
+        Optional<Roadmap> roadmapOptional = roadmapRepository.findById(roadmapId);
+        Roadmap roadmap = roadmapOptional.orElse(null);
+        if(roadmap == null) {
+            return null;
+        }
+        return RoadmapResponse.of(roadmap);
+    }
+
+    public List<CommentDto> callRoadmapComment (Long roadmapId) {
+        List<Comment> comments = commentRepository.findByRoadmapId(roadmapId);
+        List<CommentDto> commentDtos = new ArrayList<>();
+        comments.forEach(
+                comment -> { CommentDto commentDto = CommentDto.builder()
+                                .roadmapId(comment.getRoadmap().getId())
+                        .memberNickname(comment.getMember().getNickname())
+                        .content(comment.getContent())
+                        .build();
+                    commentDtos.add(commentDto);
+                }
+        );
+        return commentDtos;
+    }
+
+    public boolean saveComment (CommentDto commentDto, Long roadmapId) {
+        Comment comment = Comment.builder()
+                .roadmap(roadmapRepository.findById(roadmapId).orElse(null))
+                .content(commentDto.getContent())
+                .member(memberRepository.findByNickname(commentDto.getMemberNickname()).orElse(null))
+                .build();
+
+        if(comment.getRoadmap() == null || comment.getMember() == null) {
+            return false;
+        }
+
+        commentRepository.save(comment);
+        return true;
+    }
 }
